Revert "Change CORS configuration"
This reverts commit d88f04a566cf95db5592b9fb7aa3f640107d0daf.